mitigate --enable-preview (#9)
* update readme wrt enable preview

fix, as much as possible, the same in the pom configuration

* add CI

* fix maven invoke.  add CI build badge

* correct maven version

* update readme with reference to maven.yml example of maven opts

* update

* update