@@ -2,21 +2,38 @@
 
 See [user-manual](./user-manual.pdf) in this directory for details.
 
+## Build Status
+![Build Status](https://github.com/hellblazer/prime-mover/actions/workflows/maven.yml/badge.svg)
+
 ## License
 Licensed under AGPL V 3.0
 
+### Important! Requires  __--enable-preview__
+Prime Mover now requires the [Virtual Thread preview feature from Project Loom](https://openjdk.org/jeps/425).  Unfortunately, this means that the Maven plugin for Prime Mover ultimately
+requires  __--enable-preview__  to be used to run this plugin.  As the Prime Mover plugin is run during normal build processing
+to test the plugin, this poses a problem of how to configure this correctly in Maven.  The answer is, of course, you  **cannot**  - lol.  The plugin, under test, will run
+with the options from the invoking JVM!  Consequently, you  __must__  have  __"--enable-preview"__  in your [_MAVEN_OPTS_](https://maven.apache.org/configure.html).
+
+Much apologies for this inconvienence.  This requirement will be eliminated soon with Java 21, as Project Loom is no longer preview, but a released feature of Java 21.  This is 
+scheduled for September 2023.
+
 ## Building
-Requires Java 20 and Maven 3.83+
+Requires Java 20 and Maven 3.94+
 
 To build:
 
      cd <top level directory>
      mvn clean install
-     
+
+Please see the GitHub Action file [maven.yml](.github/workflows/maven.yml) for an example of how to set up and run your maven build successfully.
+
 ## Status
 Prime Mover is now Soot Free.  The framework now uses the JVM Virtual Threads from Project Loom to provide the blocking 
 thread continuation mechanism required for blocking events.  The Prime Mover event transform is now implemented by an ASM based tranform.  Maven artifacts are not currently 
 published, so you'll have to build them until I get that sorted.
+
+I added the GitHub action CI so you can be somewhat assured that this build is reproducible.  Due to the enable preview requirement for Project Loom, it could be a bit
+confusing and troublesome to get everything hunky dory.  But at least with the [maven.yml](.github/workflows/maven.yml) git hub action you can see what works ;0
 
 ### Prime Mover Runtime
 
@@ -43,6 +60,9 @@ provide the scanning mechanism to obtain the classes to transform.S
 
 The plugin required to transform simulation code.  This plugin runs after compilation for either main or test classes and will perform the simulation
 transform on classes in the target output directory, overwriting these class files with the transformed class.
+
+Note that because of the requirement for _--enable-preview_ you might run into interesting issues with the plugin unable to run using the Maven M2E feature.  If so, make sure
+that maven is configured to use the workspace configuration JVM and that is also configured to enable previews as a default option.
 
      <plugin>
          <groupId>com.hellblazer.primeMover</groupId>
